name:                table-layout

-- The package version.  See the Haskell package versioning policy (PVP) 
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.5.1.0

synopsis:            Layout text as grid or table.

description:         
    `table-layout` is a library for text-based table layout, it provides several
    functions and types which help in this task from the ground up, although
    using them is not necessary. It provides the following layout features:
    .
    * Fixed-size and arbitrarily sized columns and limiting versions of those
    .
    * Positional alignment of content in a column
    .
    * Alignment of content within a column at a character occurence
    .
    * Cut marks show that content has been trimmed
    .
    * Fancy tables with optional headers and user styles
    .
    * Justified text layout over multiple rows
    .
    /Note:/ This package is currently under development and may not be suited for
    productive use.

-- URL for the project homepage or repository.
homepage:            https://github.com/muesli4/table-layout
license:             BSD3
license-file:        LICENSE
author:              Moritz Bruder
maintainer:          muesli4@gmail.com
category:            Text
build-type:          Simple
-- Extra files to be distributed with the package, such as examples or a 
-- README.
-- extra-source-files:  

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >=1.10

source-repository head
    type:            git
    location:        git://github.com/muesli4/table-layout.git


library
  exposed-modules:     Text.Layout.Table,
                       Text.Layout.Table.Justify,
                       Text.Layout.Table.Style,
                       Text.Layout.Table.Position, 
                       Text.Layout.Table.Primitives.Basic, 
                       Text.Layout.Table.Primitives.AlignSpec, 
                       Text.Layout.Table.Primitives.Column,
                       Text.Layout.Table.Primitives.LenSpec,
                       Text.Layout.Table.Primitives.Occurence,
                       Text.Layout.Table.Internal
  
  other-modules:       
                       Text.Layout.Table.Primitives.AlignSpec.Internal,
                       Text.Layout.Table.Primitives.LenSpec.Internal,
                       Text.Layout.Table.Position.Internal

  
  -- LANGUAGE extensions used by modules in this package.
  other-extensions:    RecordWildCards
  
  -- Other library packages from which modules are imported.
  build-depends:       base >=4.8 && <4.9, data-default-class >=0.0.1 && < 0.1
  
  -- Directories containing source files.
  hs-source-dirs:      src
  
  -- Base language which the package is written in.
  default-language:    Haskell2010

executable table-layout-test-styles
  main-is:             Test.hs
  build-depends:       base >=4.8 && <4.9, data-default-class >=0.0.1 && < 0.1
  hs-source-dirs:      src
  other-modules:       Text.Layout.Table
  default-language:    Haskell2010

test-suite table-layout-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test-suite, src
  main-is:             Spec.hs
  build-depends:       base,
                       --Cabal,
                       QuickCheck >=2.8 && < 2.9,
                       HUnit ==1.3.*,
                       data-default-class >=0.0.1 && < 0.1,
                       hspec

  other-modules:       Text.Layout.Table, Text.Layout.Table.Primitives.Basic

  default-language:    Haskell2010
