name:                table-layout

-- The package version.  See the Haskell package versioning policy (PVP) 
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.9.0.0

synopsis:            Format tabular data as grid or table.

description:         
    `table-layout` is a library for text-based table layout and cell formatting
    with the following features:
    .
    * Set a policy for each column to determine the width.
    .
    * Position content in a column at a certain position.
    .
    * Align content in a column at a character occurence.
    .
    * Highlight trimmed content with cut marks.
    .
    * Draw fancy tables with optional headers and user styles.
    .
    * Automatically justify text and create multi-line table cells.
    .
    The module `Text.Layout.Table` contains everything that is required.
    However, all of the intermediate functionality is also exposed which makes
    it easy to create something completely new. A small tutorial is provided in
    the `README.md` file.

-- URL for the project homepage or repository.
homepage:              https://github.com/muesli4/table-layout
license:               BSD3
license-file:          LICENSE
author:                Moritz Bruder
maintainer:            muesli4@gmail.com
category:              Text
build-type:            Simple
-- Extra files to be distributed with the package, such as examples or a 
-- README.
extra-source-files:    README.md, CHANGELOG.md

-- Constraint on the version of Cabal needed to build this package.
cabal-version:         >=1.10

source-repository head
    type:              git
    location:          git://github.com/muesli4/table-layout.git


library
  exposed-modules:     Text.Layout.Table,
                       Text.Layout.Table.Cell,
                       Text.Layout.Table.Cell.Formatted,
                       Text.Layout.Table.Justify,
                       Text.Layout.Table.Style,
                       Text.Layout.Table.Vertical,
                       Text.Layout.Table.StringBuilder,
                       Text.Layout.Table.Pandoc,


                       -- Will be moved into another package in the future.
                       Text.Layout.Table.Primitives.AlignInfo,
                       Text.Layout.Table.Primitives.Basic,
                       Text.Layout.Table.Primitives.ColumnModifier,
                       Text.Layout.Table.Primitives.Header,
                       Text.Layout.Table.Primitives.Table,
                       Text.Layout.Table.Spec.AlignSpec,
                       Text.Layout.Table.Spec.ColSpec,
                       Text.Layout.Table.Spec.CutMark,
                       Text.Layout.Table.Spec.HeaderColSpec,
                       Text.Layout.Table.Spec.HeaderSpec,
                       Text.Layout.Table.Spec.LenSpec,
                       Text.Layout.Table.Spec.OccSpec,
                       Text.Layout.Table.Spec.Position,
                       Text.Layout.Table.Spec.RowGroup,
                       Text.Layout.Table.Spec.Util
  other-modules:

  
  -- LANGUAGE extensions used by modules in this package.
  other-extensions:    RecordWildCards,
                       EmptyDataDecls,
                       FlexibleInstances,
                       PatternSynonyms,
                       MultiWayIf
  
  -- Other library packages from which modules are imported.
  build-depends:       base >=4.9 && <4.15,
                       data-default-class >=0.1.1 && < 0.2,
                       data-default-instances-base ==0.1.*

  hs-source-dirs:      src
  
  -- Base language which the package is written in.
  default-language:    Haskell2010

executable table-layout-test-styles
  main-is:             Test.hs
  build-depends:       base >=4.9 && <4.15,
                       data-default-class >=0.1.1 && < 0.2,
                       data-default-instances-base ==0.1.*
  hs-source-dirs:      src
  other-modules:       Text.Layout.Table,
                       Text.Layout.Table.Cell,
                       Text.Layout.Table.Cell.Formatted,
                       Text.Layout.Table.Justify,
                       Text.Layout.Table.Style,
                       Text.Layout.Table.Vertical

                       Text.Layout.Table.Primitives.AlignInfo,
                       Text.Layout.Table.Primitives.Basic,
                       Text.Layout.Table.Primitives.ColumnModifier,
                       Text.Layout.Table.Primitives.Header,
                       Text.Layout.Table.Primitives.Table,
                       Text.Layout.Table.StringBuilder,

                       Text.Layout.Table.Spec.AlignSpec,
                       Text.Layout.Table.Spec.ColSpec,
                       Text.Layout.Table.Spec.CutMark,
                       Text.Layout.Table.Spec.HeaderColSpec,
                       Text.Layout.Table.Spec.HeaderSpec,
                       Text.Layout.Table.Spec.LenSpec,
                       Text.Layout.Table.Spec.OccSpec,
                       Text.Layout.Table.Spec.Position,
                       Text.Layout.Table.Spec.RowGroup,
                       Text.Layout.Table.Spec.Util

  default-language:    Haskell2010

test-suite table-layout-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test-suite, src
  main-is:             Spec.hs
  build-depends:       base >=4.9 && <4.15,
                       QuickCheck >=2.8 && < 2.14,
                       HUnit >=1.3,
                       data-default-class >=0.1.1 && < 0.2,
                       data-default-instances-base ==0.1.*,
                       hspec

  other-modules:       TestSpec,

                       Text.Layout.Table

                       Text.Layout.Table.Cell,
                       Text.Layout.Table.Cell.Formatted,
                       Text.Layout.Table.Justify,
                       Text.Layout.Table.Style,
                       Text.Layout.Table.Vertical

                       Text.Layout.Table.Primitives.AlignInfo,
                       Text.Layout.Table.Primitives.Basic,
                       Text.Layout.Table.Primitives.ColumnModifier,
                       Text.Layout.Table.Primitives.Header,
                       Text.Layout.Table.Primitives.Table,
                       Text.Layout.Table.StringBuilder,

                       Text.Layout.Table.Spec.AlignSpec,
                       Text.Layout.Table.Spec.ColSpec,
                       Text.Layout.Table.Spec.CutMark,
                       Text.Layout.Table.Spec.HeaderColSpec,
                       Text.Layout.Table.Spec.HeaderSpec,
                       Text.Layout.Table.Spec.LenSpec,
                       Text.Layout.Table.Spec.OccSpec,
                       Text.Layout.Table.Spec.Position,
                       Text.Layout.Table.Spec.RowGroup,
                       Text.Layout.Table.Spec.Util

  default-language:    Haskell2010
